# cplusplus

./: .gitignore  README.md  makefile
00-HelloWorld/: helloworld.cpp
01-StructureOfAProgram/: program.cpp
02-VariablesAndTypes/: makefile  program.cpp
03-Constants/: program.cpp
04-Operators/: program.cpp
05-BasicInputOutput/: program.cpp
06-StatementsAndFlowControl/: program.cpp
07-Functions/: program.cpp
08-OverloadsAndTemplates/: program.cpp
09-NameVisibility/: program.cpp
10-Arrays/: makefile  program.cpp
11-CharacterSequences/: program.cpp
12-Pointers/: program.cpp
13-DynamicMemory/: program.cpp
14-DataStructures/: program.cpp
15-OtherDataTypes/: program.cpp
16-ClassesI/: program.cpp
17-ClassesII/: makefile  program.cpp
18-SpecialMembers/: makefile  program.cpp  program.hpp
19-FriendshipAndInheritance/: CMakeLists.txt  makefile.back
19-FriendshipAndInheritance/inc/: library.hpp
19-FriendshipAndInheritance/src/: library.cpp  main.cpp
exercises/exercise_1/task_1/: commands.sh
exercises/exercise_1/task_2/: CMakeLists.txt  build.sh  install.sh
exercises/exercise_1/task_2/include/: ipb_arithmetic.hpp
exercises/exercise_1/task_2/include/ipb_arithmetic/: subtract.hpp  sum.hpp
exercises/exercise_1/task_2/src/: main.cpp  subtract.cpp  sum.cpp
exercises/exercise_2/cmake/: StaticAnalyzers.cmake
exercises/exercise_2/task_1/: CMakeLists.txt
exercises/exercise_2/task_1/src/: main.cpp
exercises/exercise_2/task_2/: CMakeLists.txt
exercises/exercise_2/task_2/src/: main.cpp
exercises/exercise_2/tests/: test_task_1.sh  test_task_2.sh
